# research-face-excercises-dynamics

./: .env_exapmle  .gitignore  Data processing_02.ipynb  Data_processing_01.ipynb  LICENSE  Pipfile  README.md  Transformer_exp_01.ipynb  Transformer_exp_02.ipynb  Transformer_exp_03.ipynb  data.dvc  models.dvc  old_data.dvc  pyproject.toml  requirements.txt
.dvc/: config
dvclive/: metrics.json  report.html
dvclive/plots/metrics/train/: accuracy.tsv  loss.tsv
results/: MPHNE_detailed_architecture.htm  MPHN_architecture.excalidraw  classification_architecture_01.txt
results/MPHNE_detailed_architecture_files/: index-C4-HgQg_.js  index-CaIbwLKj.css
src/: Data Augmentation.ipynb  Data_Observatory.ipynb  Data_Set_ODA.ipynb  Data_measure_feature_eng.ipynb  Data_processing_01.ipynb  Dependencies-test.ipynb  Duplicates_lookup.ipynb  Evalutation_finescore_1.ipynb  Explaining_models.ipynb  Healthy_patients_inference.ipynb  Modeling_exp_01.ipynb  Modeling_exp_02.ipynb  Modeling_exp_03.ipynb  Modeling_exp_04.ipynb  Modeling_exp_05.ipynb  Modeling_exp_FS.ipynb  Modeling_exp_ResNet.ipynb  Modeling_exp_ResNet_session.ipynb  Modeling_exp_TPCNN.ipynb  Modeling_exp_TPCNN_exercise.ipynb  Modeling_exp_TPCNN_session.ipynb  Modeling_exp_regr_05.ipynb  Results_plotting.ipynb
src/archive/: Transformer_exp_02.ipynb  Transformer_exp_03.ipynb
src/settings/: all_regions.json  all_regions_tpcnn.json  pois_base.json  pois_region.json  pois_region_tpcnn.json  pois_side.json  pois_symetry.json
src/utils/: input.py  transformations.py
